k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retail-store-ingress
  namespace: retail-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-04f5f7e8963ad7a9a,subnet-056c6e36171d89dfe
    alb.ingress.kubernetes.io/tags: Project=karatu-2025-capstone
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:904233100204:certificate/88084d77-1222-498f-b356-89ca9267f507
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
  - host: innovatemart-inc.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui
            port:
              number: 80
#testing
